--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,20 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.12",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "axios": "^0.21.4",
     "bootstrap": "^4.3.1",
-    "sass": "^1.43.4"
+    "history": "^5.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
+    "react-scripts": "4.0.3",
+    "sass": "^1.43.4",
+    "typescript": "^4.5.2",
+    "web-vitals": "^1.1.2"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.2"
