--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,10 +25,10 @@
     "fsevents": "^2.1.2"
   },
   "scripts": {
-    "start": "PORT=5555 react-scripts start",
-    "build": "PORT=5555 react-scripts build",
-    "test": "PORT=5555 react-scripts test",
-    "eject": "PORT=5555 react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
